Small fixes on mobile.

--- a/src/styles/4-modules/_imgcards.sass
+++ b/src/styles/4-modules/_imgcards.sass
@@ -63,7 +63,7 @@
         background: url('../images/sleepy-thumb-bg.jpg')
     &__item
         position: absolute
-        // box-shadow: 0 .3rem 2rem rgba(0,0,0,.20)
+        box-shadow: 0 .3rem 2rem rgba(0,0,0,.20)
         width: 300px
         height: 184px
         z-index: 5
@@ -72,7 +72,7 @@
         opacity: 0
         transition: all 600ms cubic-bezier(.6,.05,0,.99)
         transition-delay: 100ms
-    .rennie &__item
+    .bookopus &__item
         left: auto
         right: calc(58% - (300px/2))
     &__back
@@ -83,7 +83,7 @@
         transform: translateY(5rem)
         transition: all 600ms cubic-bezier(.6,.05,0,.99)
         transition-delay: 0
-    .rennie &__back
+    .bookopus &__back
         left: auto
         right: 18%
     &--reveal
@@ -99,6 +99,6 @@
         &__back
             height: calc(20.4rem / 1.5)
             left: -38vw
-        .rennie &__back
+        .bookopus &__back
             left: auto
             right: -18vw
